--- a/views/myCampaigns.ejs
+++ b/views/myCampaigns.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Campaigns</title>
+	<title>My Campaigns</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -17,13 +17,13 @@
             <div class="col-sm-4 col-sm-offset-4">
 
                 <div class="validatedCampaigns"><h2>Validated campaigns</h2></div>
-                <%- include('campaignType', {status: "validated"}); %>
+                <%- include('campaignType', {status: "ACCPT"}); %>
 
                 <div class="pendingCampaigns"><h2>Pending campaigns</h2></div>
-                <%- include('campaignType', {status: "pending"}); %>
+                <%- include('campaignType', {status: "PENDG"}); %>
 
                 <div class="rejectedCampaigns"><h2>Rejected campaigns</h2></div>
-                <%- include('campaignType', {status: "rejected"}); %>
+                <%- include('campaignType', {status: "RJCTD"}); %>
 
             </div>
     	</div>
