--- a/views/campaigns/mySubscriptions.ejs
+++ b/views/campaigns/mySubscriptions.ejs
@@ -1,20 +1,15 @@
 <!doctype html>
 <html>
 <head>
-	<title>My Campaigns</title>
+	<title>My subscriptions</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/styles/style.css">
-	<style>
-		body 		{ padding-top:80px; word-wrap:break-word; }
-	</style>
+    <%- include('./libs.ejs'); %>
 </head>
 <body>
 
     <div class="container">
     	<div class="row">
-            <div class="col-sm-4 col-sm-offset-4">
+            <div class="col-sm-6 col-sm-offset-3">
 
                 <div class="validatedCampaigns"><h2>Validated campaigns</h2></div>
                 <%- include('campaignType', {status: "ACCPT"}); %>
