--- a/views/campaigns/newCampaign.ejs
+++ b/views/campaigns/newCampaign.ejs
@@ -11,8 +11,8 @@
     	<div class="row">
             <div class="col-sm-6 col-sm-offset-3">
 
-                <form action="/campaign/new" method="put">
-                    <input type="hidden" name="_method" value="put">
+                <form action="/campaign/new" method="post">
+                    <input type="hidden" name="id" value="<%= user.user_id %>">
                     Title :<br>
                     <input type="text" name="title"><br>
                     Description :<br>
