--- a/views/campaigns/newCampaign.ejs
+++ b/views/campaigns/newCampaign.ejs
@@ -12,16 +12,15 @@
             <div class="col-sm-6 col-sm-offset-3">
 
                 <form action="/campaign/new" method="post">
-                    <%= user.user_id %>
                     <input type="hidden" name="owner_id" value="<%= user.user_id %>">
                     Title :<br>
-                    <input type="text" name="title"><br>
+                    <input type="text" name="title" required><br>
                     Description :<br>
-                    <textarea cols="10" rows="5" name="description"></textarea><br>
+                    <textarea cols="10" rows="5" name="description" required></textarea><br>
                     Minimum de followers :<br>
-                    <input type="number" name="minFollower"><br>
+                    <input type="number" name="minFollower" required><br>
                     Budget :<br>
-                    <input type="number" name="budget"><br>
+                    <input type="number" name="budget" required><br>
                     <input type="submit" value="Créer">
                 </form>
 
